Fixing bug 90347 -- some JPEGs display with noise -- checking in for nivedita@netscape.com.  r=pavlov sr=ben